# ticket-tracker

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Dockerfile  MIGRATION.md  NOTICE.md  README.md  docker-compose.prod.yml  docker-compose.test-vpn.yml  docker-compose.test.yml  docker-compose.vpn.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  prisma.config.ts
.beads/: metadata.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  desktop-release.yml  docker.yml  gitleaks.yml
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src/: index.html  main.js  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.mjs  package.json  vitest.config.ts
apps/web/prisma/: schema.prisma
apps/web/public/: fairtrail-cli  flight-finder-cli  flight-finder-cli-flags.sh  install.sh  manifest.json  sw.js
apps/web/src/: desktop-launcher.test.ts  middleware.ts
assets/accounts/: README.md
scripts/: Dockerfile.install-test  browser-smoke-test.sh  capture-demo-light.ts  cli-runtime-test.sh  debian-install-smoke.sh  docker-compose.integration.yml  docker-integration-test.sh  docker-smoke-test.sh  generate-avatars.mjs  install-e2e-test.sh  install-flow-test.sh  migration-test.sh  screenshot-accounts.mjs  seed-demo.mjs  staging-test.sh
(+345 files in other folders)
