[package]
name = "flight-finder-desktop"
version = "0.13.0"
description = "Flight Finder desktop launcher"
authors = ["Flight Finder"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.77.2"

# The library that main.rs calls into (also the entry point for mobile targets).
[lib]
name = "flight_finder_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Enables Tauri's custom-protocol asset serving in release builds.
custom-protocol = ["tauri/custom-protocol"]
